deep into binary relations

--- a/forallx-adl-fol.tex
+++ b/forallx-adl-fol.tex
@@ -1089,7 +1089,7 @@ This argument rests on one of the logical principles governing identity: that if
 		\item Identity is \define{symmetric}: if $\meta{a} = \meta{b}$,  then also $\meta{b} = \meta{a}$.
 		\item Identity is \define{transitive}: if $\meta{a} = \meta{b}$,  and $\meta{b} = \meta{c}$, then also $\meta{a} = \meta{c}$.  
 	\end{itemize}}
-These principles can apply to other two-place predicates too. For example, the relation `\gap{1} is taller than \gap{2}' is also transitive, since if Albert is taller than Barbara, and Barbara is taller than Chloe, then Albert must be taller than Chloe too. But it is not reflexive or symmetric: Albert is not taller than himself, and if Albert is taller than Barbara, it cannot be also that Barbara is taller than Albert. We will return to this topic in §\ref{graph}.
+These principles can apply to other two-place predicates too. For example, the relation `\gap{1} is taller than \gap{2}' is also transitive, since if Albert is taller than Barbara, and Barbara is taller than Chloe, then Albert must be taller than Chloe too. But it is not reflexive or symmetric: Albert is not taller than himself, and if Albert is taller than Barbara, it cannot be also that Barbara is taller than Albert. We will return to this topic in §\ref{binary}.
 
 A final principle about identity is \define{Leibniz' Law}, named after the philosopher and mathematician Gottfried Leibniz: \factoidbox{If $\meta{x}=\meta{y}$ then for any property at all,  $\meta{x}$ has it iff $\meta{y}$ has it too. That is: every instance of this schematic sentence of \FOL, for any predicate $\meta{F}$ whatsoever, is true: $$\forall x \forall y \bigl(x=y \eif (\meta{F}x \eiff \meta{F}y) \bigr).$$} 
 Leibniz' Law certainly entails that identical things are indistinguishable, sharing every property in common. But as we have already noted, identity isn't merely indistinguishability. Two things might be indistinguishable, but if there are two, they are not strictly identical in the logical sense we are concerned with. Yet in many cases, even very similar things do turn out to have some distinguishing property. There is a significant philosophical controversy over whether there can be cases of mere numerical difference, i.e., of non-identity without any qualitative dissimilarity. 
