--- a/forallx-adl-interpretations.tex
+++ b/forallx-adl-interpretations.tex
@@ -353,7 +353,12 @@ Here the label `$f$' represents the name attached to 4, the blue dotted arrow re
 
 \section{Properties of Binary Relations} \label{binary}
 
-The extension of a two-place predicate is a collection of ordered pairs drawn from a domain $D$. Such a collection is also known as a \define{binary relation} on $D$. Binary relations have many interesting features. We have seen some of them already in §\ref{lli}, when we noted that reflexivity, symmetry and transitivity are all features of identity. We will now treat these notions more generally. \emph{This section is optional.} 
+
+The extension of a two-place predicate is a collection of ordered pairs drawn from a domain $D$. Such a collection is also known as a \define{binary relation} on $D$. Binary relations have many interesting features. We have seen some of them already in §\ref{lli}, when we noted that reflexivity, symmetry and transitivity are all features of identity. We will now treat these notions more generally. 
+
+\begin{itemize}
+ 	\item \emph{This section should be regarded as optional, and only for the dedicated student of logic.}
+ \end{itemize} 
 
 \factoidbox{\begin{itemize}
 	\item A binary relation $R$  on $D$ is \define{reflexive} iff for any $x$ in $D$, $\ntuple{x,x}$ is in $R$. 
