tweak to reflexive crossreference

--- a/forallx-adl-prooffol.tex
+++ b/forallx-adl-prooffol.tex
@@ -731,7 +731,7 @@ However, every object is identical to itself. No premises, then, are required in
 \end{proof}}
 Notice that this rule does not require referring to any prior lines of the proof, nor does it rely on any assumptions. For any name \meta{c}, you can write $\meta{c}=\meta{c}$ at any point, with only the {=}I rule as justification. 
 
- A relation is \define{reflexive} iff it holds between anything and itself. (In the directed graph representation of the relation introduced in §\ref{graph}, each node has an arrow pointing to itself.) Let's see this rule in action, in a proof that identity is reflexive:
+Recall that a relation is reflexive iff it holds between anything in the domain and itself (§§\ref{lli} and\ref{binary}). Let's see this rule in action, in a proof that identity is reflexive:
 \begin{proof}
 	\have{a}{a=a}\idi{}
 	\have{b}{\forall x x=x}\Ai{a}
